--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.testng:testng:7.1.0'
     implementation 'org.testng:testng:7.1.0'
     implementation 'org.testng:testng:7.1.0'
+    implementation 'junit:junit:4.13.1'
 
 
     testImplementation(platform('org.junit:junit-bom:5.7.0'))
